Removed support for rewrite-maven-plugin.