@@ -1,7 +1,7 @@
 #!/usr/bin/env groovy
 /*
  * nmw-oss - Aggregator POM for all New Media Works open-source software projects.
- * Copyright (C) 2021, 2022, 2023, 2024  New Media Works
+ * Copyright (C) 2021, 2022, 2023, 2024, 2025  New Media Works
  *     info@newmediaworks.com
  *     703 2nd Street #465
  *     Santa Rosa, CA 95404
@@ -107,9 +107,6 @@ def upstreamProjects = [
  *                                                                                        *
  * mavenOpts            The Maven Java options.                                           *
  *                      Defaults to '-Djansi.force' for colorful logs                     *
- *                                                                                        *
- * mavenOptsJdk16       The Maven Java options for JDK 16+.                               *
- *                      Defaults to exporting Java compiler for rewrite-maven-plugin.     *
  *                                                                                        *
  * extraProfiles        An array of additional profiles to pass to Maven.                 *
  *                      Defaults to []                                                    *
@@ -435,10 +432,6 @@ if (!binding.hasVariable('maven')) {
 }
 if (!binding.hasVariable('mavenOpts')) {
   binding.setVariable('mavenOpts', '-Djansi.force')
-}
-if (!binding.hasVariable('mavenOptsJdk16')) {
-  // See https://docs.openrewrite.org/getting-started/getting-started#running-on-jdk-16-and-newer
-  binding.setVariable('mavenOptsJdk16', '--add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED')
 }
 if (!binding.hasVariable('extraProfiles')) {
   binding.setVariable('extraProfiles', [])
@@ -787,7 +780,7 @@ or any build that adds or removes build artifacts."""
               dir(projectDir) {
                 withMaven(
                   maven: maven,
-                  mavenOpts: "${jdk == '11' ? mavenOpts : "$mavenOpts $mavenOptsJdk16"}",
+                  mavenOpts: mavenOpts,
                   mavenLocalRepo: ".m2/repository-jdk-$jdk",
                   jdk: "jdk-$jdk"
                 ) {
@@ -842,7 +835,7 @@ or any build that adds or removes build artifacts."""
               dir(projectDir) {
                 withMaven(
                   maven: maven,
-                  mavenOpts: "${testJdk == '11' ? mavenOpts : "$mavenOpts $mavenOptsJdk16"}",
+                  mavenOpts: mavenOpts,
                   mavenLocalRepo: ".m2/repository-jdk-$jdk",
                   jdk: "jdk-$testJdk"
                 ) {
@@ -867,7 +860,7 @@ or any build that adds or removes build artifacts."""
       steps {
         // Steps moved to separate function to avoid "Method too large"
         // See https://stackoverflow.com/a/47631522
-        deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk16, mvnCommon)
+        deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mvnCommon)
       }
     }
     stage('SonarQube analysis') {
@@ -883,7 +876,7 @@ or any build that adds or removes build artifacts."""
       steps {
         // Steps moved to separate function to avoid "Method too large"
         // See https://stackoverflow.com/a/47631522
-        sonarQubeAnalysisSteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk16, mvnCommon)
+        sonarQubeAnalysisSteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mvnCommon)
       }
     }
     stage('Quality Gate') {
@@ -930,7 +923,7 @@ or any build that adds or removes build artifacts."""
 
 // Steps moved to separate function to avoid "Method too large"
 // See https://stackoverflow.com/a/47631522
-void deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk16, mvnCommon) {
+void deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mvnCommon) {
   // Make sure working tree not modified by build or test
   sh checkTreeUnmodifiedScriptBuild(niceCmd)
   dir(projectDir) {
@@ -951,7 +944,7 @@ void deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk1
     sh moveSurefireReportsScript()
     withMaven(
       maven: maven,
-      mavenOpts: "${deployJdk == '11' ? mavenOpts : "$mavenOpts $mavenOptsJdk16"}",
+      mavenOpts: mavenOpts,
       mavenLocalRepo: ".m2/repository-jdk-$deployJdk",
       jdk: "jdk-$deployJdk"
     ) {
@@ -966,13 +959,13 @@ void deploySteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk1
 
 // Steps moved to separate function to avoid "Method too large"
 // See https://stackoverflow.com/a/47631522
-void sonarQubeAnalysisSteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mavenOptsJdk16, mvnCommon) {
+void sonarQubeAnalysisSteps(niceCmd, projectDir, deployJdk, maven, mavenOpts, mvnCommon) {
   // Not doing shallow: sh "${niceCmd}git fetch --unshallow || true" // SonarQube does not currently support shallow fetch
   dir(projectDir) {
     withSonarQubeEnv(installationName: 'AO SonarQube') {
       withMaven(
         maven: maven,
-        mavenOpts: "${deployJdk == '11' ? mavenOpts : "$mavenOpts $mavenOptsJdk16"}",
+        mavenOpts: mavenOpts,
         mavenLocalRepo: ".m2/repository-jdk-$deployJdk",
         jdk: "jdk-$deployJdk"
       ) {
